--- a/css/page.css
+++ b/css/page.css
@@ -157,7 +157,7 @@
 	color: #f00;
 }
 
-/*来时的路*/
+/*精彩纷呈*/
 .achievement-list {
 	padding: 0 90px;
 }
@@ -166,7 +166,7 @@
 	font-size: 14px;
 } 
 
-/*面朝大海，春暖花开*/
+/*首页文字*/
 .infor-list,.news-list{
 	margin-top: 30px;
 }
@@ -285,7 +285,18 @@
 	margin-left: 40px;
 	line-height: 200%;
 }
-
-
-
-
+*{margin:0;padding:0;}
+.clears{ clear:both;}
+/*messages*/
+.messages{padding:15px 0;margin-bottom: 15px;}
+.messages input,.messages select,.messages textarea{margin:0;padding:0; background:none; border:0; font-family:"Microsoft Yahei";}
+.messlist {height:30px;margin-bottom:10px;}
+.messlist label{float:left;width:100px; height:30px; font-size:14px; line-height:30px; text-align:right;padding-right:10px;}
+.messlist input{float:left;width:300px;height:28px;padding-left:5px;border:#ccc 1px solid;}
+.messlist.textareas{ height:auto;}
+.messlist textarea{float:left;width:400px; height:110px;padding:5px;border:#ccc 1px solid;}
+.messlist.yzms input{width:100px;}
+.messlist.yzms .yzmimg{ float:left;margin-left:10px;}
+.messsub{padding:0px 0 0 110px;}
+.messsub input{width:100px; height:35px; background:#ddd; font-size:14px; font-weight:bold; cursor:pointer;margin-right:5px}
+.messsub input:hover{ background:#f60;color:#fff;}
